Блин, опять мержи что-то напортачили

--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
@@ -100,6 +100,7 @@ public class ApprovalStageService : ContextService, IApprovalStageService
 
 |`CreateNextTask(ApprovalStage, Reconcile)`
 
+|Создание задания согласования.
 
 |`OnTaskCreated(ApprovalStage, ApprovalPath, Reconcile, Task)`
 
