--- a/modules/ROOT/partials/bo-om-services-partners.adoc
+++ b/modules/ROOT/partials/bo-om-services-partners.adoc
@@ -6,3 +6,4 @@
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindUnitGroups_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyMachineReadableProvider_IN.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyService_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:PowerOfAttorneyHandlingFlags_EN.adoc[]
