TSK-4787 / GBL-3230 -- запрет удаления кодов полномочий

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -164,6 +164,10 @@
 |Результат импорта полномочий из ЕСНСИ.
 |`xref:Entities/IPowersService_IN.adoc[IPowersService]`
 |Сервис справочника полномочий.
+|`xref:Entities/FindPowerOfAttorneyCardsResults_CL.adoc[FindPowerOfAttorneyCardsResults]`
+|Содержит результаты поиска использования кодов полномочий в СКД.
+|`xref:Entities/FindPowerOfAttorneyCardsResultsItem_CL.adoc[FindPowerOfAttorneyCardsResultsItem]`
+|Результат поиска использования кода полномочий в СКД.
 |`ServerConnectionInfo` |Параметры соединения с сервером.
 |`xref:Entities/StartBusinessProcessErrorInfo_CL.adoc[StartBusinessProcessErrorInfo]` |Представляет содержимое ошибки запуска бизнес-процесса.
 |`xref:Entities/TaskStopExecutionInfo_CL.adoc[TaskStopExecutionInfo]` |Представляет содержимое ошибки остановки исполнения задания.
