--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -157,6 +157,8 @@
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyVerification_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/ImportESNSIResults_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/IPowersService_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/FindPowerOfAttorneyCardsResults_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/FindPowerOfAttorneyCardsResultsItem_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/StartBusinessProcessErrorInfo_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskCopyResultsOptions_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskStopExecutionInfo_CL.adoc[]
