--- a/modules/cards/pages/files.adoc
+++ b/modules/cards/pages/files.adoc
@@ -37,7 +37,7 @@ Guid newFileId = file.Id; <.>
 
 [NOTE]
 ====
-Подробная информация о внешнем хранении файлов приведена в документации по администрированию модуля _{pl}_, раздел "xref:external-storages:external-storages-develop.adoc[Внешние хранилища]", и документации "Общее описание системы", раздел xref:ROOT:ROOT:binary-storage.adoc[].
+Подробная информация о внешнем хранении файлов приведена в документации по администрированию модуля _{pl}_, раздел "xref:external-storages:external-storages-develop.adoc[Внешние хранилища]", и документации "Общее описание системы", раздел xref:system:ROOT:binary-storage.adoc[].
 ====
 
 При работе с данными файла следует учитывать следующую особенность: между информационной и бинарной частью файла устанавливается связь один ко многим -- несколько информационных частей могут ссылаться на одни бинарные данные. Например, данная ситуация возникает при копировании файла с помощью метода `FileData.Copy`. После изменения содержимого файла (с использованием стандартного API) оригинал и копия станут ссылаться на собственный (уникальный) экземпляр бинарных данных.
